（fix） Fix vertical alignment

--- a/09-Sound Board/style.css
+++ b/09-Sound Board/style.css
@@ -17,6 +17,10 @@ body {
   text-align: center;
 }
 
+#button-container {
+  flex: 1;
+}
+
 .btn {
   background-color: rebeccapurple;
   border-radius: 5px;
